# rs-service-auth

./: .gitignore  Cargo.toml  Dockerfile  README  README.md  Rocket.toml  demo_db.json
.github/: deploy.yml
.github/workflows/: docker-image.yml
deploy/: Dockerfile  Dockerfile_depr  README  build_and_push.sh  kubernetes-manifest.yaml  secrets.yaml
deploy/tools/: deployment-restart.sh  get-external-ip.sh
key/: HS256Key-b64.txt  HS256Key.key
src/: config.rs  db.rs  key.rs  main.rs  routes.rs  token.rs  user.rs
