[package]
name = "rust-service-auth"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.13.1"
envconfig = "0.10.0"
jwt-simple = "0.11.2"
pwhash = "1.0.0"
rocket = { version = "0.5.0-rc.2", features = ["json"]}
serde = {version = "1.0", features = ["derive"]}
serde_json = {version = "1.0"}
names = { version = "0.14.0", default-features = false }

[dependencies.sqlx]
version = "0.5"
default-features = false
features = ["macros", "offline", "migrate"]

[dependencies.rocket_db_pools]
version = "0.1.0-rc.2"
features = ["sqlx_postgres"]
